@@ -22,7 +22,7 @@ Gem::Specification.new do |spec|
     "LICENSE.txt",
     "README.rdoc"
   ]
-  
+
   spec.files         = `git ls-files -z`.split("\x0").reject { |f| f.match(%r{^(test|spec|features)/}) }
   spec.bindir        = "exe"
   spec.executables   = spec.files.grep(%r{^exe/}) { |f| File.basename(f) }
