@@ -1,9 +1,9 @@
 $LOAD_PATH.unshift "#{File.dirname(__FILE__)}/../../lib"
 
+require_relative '../common'
 require 'mocha/setup'
 require 'pty'
 require 'expect'
-require_relative '../common'
 
 module IntegrationTestHelpers
   VERBOSE = false
